--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
+  "homepage": "https://boxenofdonuts.github.io/memory-game/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
